# Langton

./: .gitignore  CHECKLIST_FINAL.md  CMakeLists.txt  PERFORMANCE_REPORT.md  README.md  TEST_REPORT.md  USAGE.md  VERIFICARE_DOCUMENT.md  benchmark.py  benchmark_results.json
experiments/: CMakeLists.txt  benchmark.cpp  plot_results.py
src/: main.cpp
src/mpi/: communicator.cpp  communicator.hpp  domain.cpp  domain.hpp  mpi_simulator.cpp  simulator.hpp
src/sequential/: ant.cpp  ant.hpp  grid.cpp  grid.hpp  simulator.cpp  simulator.hpp
src/utils/: io.cpp  io.hpp  timing.hpp
tests/: CMakeLists.txt  test_ant.cpp  test_correctness.cpp  test_grid.cpp
ui/: README.md  app.js  index.html  server.py
